SignatureRequestOrigin: fix collapsing icon

--- a/ui/components/app/signature-request-original/index.scss
+++ b/ui/components/app/signature-request-original/index.scss
@@ -167,6 +167,10 @@
     margin-right: 5px;
   }
 
+  &__origin-icon {
+    flex: 0 0 24px;
+  }
+
   &__origin {
     margin-left: 5px;
   }
